<resources>
    <string name="app_name">Snap</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="sign_up_error_message">Please make sure you enter a username, password and email address.</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your devices external storage</string>
    <string name="general_error">Sorry there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">Sorry there was an error opening the file.</string>
    <string name="error_file_size_too_large">The file is too large! Select a new file.</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was a problem with the selected file. Please select a different file.</string>
    <string name="sorry_error">We\'re sorry!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again!</string>
    <string name="subtitle"><![CDATA[Anonymous & Private]]></string>
    <string name="cancel_up_button_label">CANCEL</string>
    <string-array name="camera_choice">
        <item>Take picture</item>
        <item>Take video</item>
        <item>Choose picture</item>
        <item>Choose video</item>
    </string-array>
</resources>
