<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.akashpopat.snap.ui.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>



    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subTitle"
        style="@style/AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">
        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText"/>

        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:ems="10"
            android:id="@+id/emailField"
            style="@style/AuthEditText"/>

        <EditText
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            style="@style/AuthEditText"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"/>

    <Button
        android:text="@string/sign_up_button_label"
        android:id="@+id/signupButton"
        style="@style/AuthButton"
    android:layout_below="@id/editTextLayout"
    android:layout_alignLeft="@+id/editTextLayout"
    android:layout_toLeftOf="@id/buttonDivider"
        />

    <Button
        android:text="@string/cancel_up_button_label"
        android:id="@+id/cancelButton"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        android:layout_alignRight="@id/editTextLayout"
        style="@style/AuthButton"/>
</RelativeLayout>
